# algorithms

./: .gitignore  CMakeLists.txt
Task 1155 [Timus]/: task1155.cpp
Task 1401 [Timus]/: task1401.cpp
Task A/: taskA.c
Task A [Yandex Contest]/: taskA.c
Task B [Yandex Contest]/: taskB.cpp
Task C [Yandex Contest]/: taskC.cpp
Task D/: taskD.cpp
Task D [Yandex Contest]/: taskD.cpp
Task F [Yandex Contest]/: taskF.cpp
Task H [Yandex Contest]/: taskH.cpp
