set(CMAKE_CXX_STANDARD 17)

add_executable(taskA "Task A [Yandex Contest]/taskA.c")
add_executable(taskB "Task B [Yandex Contest]/taskB.cpp")
add_executable(taskC "Task C [Yandex Contest]/taskC.cpp")
add_executable(taskD "Task D [Yandex Contest]/taskD.cpp")
add_executable(task1155 "Task 1155 [Timus]/task1155.cpp")
add_executable(task1401 "Task 1401 [Timus]/task1401.cpp")

add_executable(taskE "Task E [Yandex Contest]/taskE.cpp")
add_executable(taskF "Task F [Yandex Contest]/taskF.cpp")
add_executable(taskH "Task H [Yandex Contest]/taskH.cpp")